--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </div>
 
                     <div class="text">
-                        <p>Scaling & automating customer communocation made easy</p>
+                        <p>Scaling & <br />automating <br>customer communocation made easy</p>
                     </div>
 
                     <div class="link">
