--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                 <div class="box">
                     <div class="heading">
-                        <sapn> INDUTRIES</sapn>
+                        <sapn> INDUSTRIES</sapn>
                     </div>
 
                     <div class="list">
